--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
-        <ul class="navigation">
-          <li><a href="#studio">Studio</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contacts">Contacts</a></li>
+        <a href="./index.html" class="logo">Web<span>Studio</span></a>
+        <ul>
+          <li><a href="./index.html" class="link">Studio</a></li>
+          <li><a href="#portfolio" class="link">Portfolio</a></li>
+          <li><a href="#contacts" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address class="address-info">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="link-address">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="link-address">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -77,64 +77,64 @@
         <ul>
           <li>
             <img src="./images/img-1.jpg" alt="person-1" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="name-item" >Mark Guerrero</h3>
+            <p class="role" >Product Designer</p>
           </li>
           <li>
             <img src="./images/img-2.jpg" alt="person-2" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name-item" >Tom Ford</h3>
+            <p class="role" >Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img-3.jpg" alt="person-3" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="name-item" >Camila Garcia</h3>
+            <p class="role" >Marketing</p>
           </li>
           <li>
             <img src="./images/img-4.jpg" alt="person-4" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="name-item" >Daniel Wilson</h3>
+            <p class="role" >UI Designer</p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="porfolio" >Our Portfolio</h2>
         <ul>
-          <li>
-            <img src="./images/image-1.jpg" alt="App-for-banking" />
-            <h3>Banking App</h3>
-            <p>App</p>
+          <l class="item-card" >
+            <img  src="./images/image-1.jpg" alt="App-for-banking" width="360" />
+            <h3 class="name-item" >Banking App</h3>
+            <p class="role" >App</p>
+          </l>
+          <li class="item-card" >
+            <img src="./images/image-2.jpg" alt="Marketing-payment" width="360" />
+            <h3 class="name-item" >Cashless Payment</h3>
+            <p class="role" >Marketing</p>
           </li>
-          <li>
-            <img src="./images/image-2.jpg" alt="Marketing-payment" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+          <li class="item-card" >
+            <img  src="./images/image-3.jpg" alt="Meditation-app" width="360" />
+            <h3 class="name-item" >Meditation App</h3>
+            <p class="role" >App</p>
           </li>
-          <li>
-            <img src="./images/image-3.jpg" alt="Meditation-app" />
-            <h3>Meditation App</h3>
-            <p>Meditation App</p>
+          <li class="item-card" >
+            <img  src="./images/image-4.jpg" alt="Taxi-service" width="360" />
+            <h3 class="name-item" >Taxi Service</h3>
+            <p class="role" >Marketing</p>
           </li>
-          <li>
-            <img src="./images/image-4.jpg" alt="Taxi-service" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+          <li class="item-card" >
+            <img  src="./images/image-5.jpg" alt="Screen-illustrations" width="360" />
+            <h3 class="name-item" >Screen Illustrations</h3>
+            <p class="role" >Design</p>
           </li>
-          <li>
-            <img src="./images/image-5.jpg" alt="Screen-illustrations" />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
-          </li>
-          <li>
-            <img src="./images/image-6.jpg" alt="Online-courses" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+          <li class="item-card" >
+            <img  src="./images/image-6.jpg" alt="Online-courses" width="360" />
+            <h3 class="name-item" >Online Courses</h3>
+            <p class="role" >Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="page-footer">
-      <a href="./index.html" class="logo-footer"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo-footer">Web<span class="logo-style">Studio</span></a>
       <p class="text-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
