--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="#contacts" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address class="address-info">
+      <address">
         <ul>
           <li><a href="mailto:info@devstudio.com" class="link-address">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111" class="link-address">+11 (000) 111-11-11</a></li>
@@ -36,61 +36,61 @@
     </header>
     <main>
       <section class="banner">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="banner-title" >Effective Solutions for Your Business</h1>
         <button type="button" class="order-button">Order Service</button>
       </section>
       <section>
         <h2 class="visually-hidden">Our advantages</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="advantages" >Strategy</h3>
+            <p class="role" >
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="advantages" >Punctuality</h3>
+            <p class="role" >
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="advantages" >Diligence</h3>
+            <p class="role" >
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="advantages" >Technologies</h3>
+            <p class="role" >
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
-            </p>
+            </p  >
           </li>
         </ul>
       </section>
-      <section class="team-info">
-        <h2>Our Team</h2>
+      <section class="team-cards">
+        <h2 class="team-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-info" >
             <img src="./images/img-1.jpg" alt="person-1" width="264" />
             <h3 class="name-item" >Mark Guerrero</h3>
             <p class="role" >Product Designer</p>
           </li>
-          <li>
+          <li class="team-info" >
             <img src="./images/img-2.jpg" alt="person-2" width="264" />
             <h3 class="name-item" >Tom Ford</h3>
             <p class="role" >Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-info" >
             <img src="./images/img-3.jpg" alt="person-3" width="264" />
             <h3 class="name-item" >Camila Garcia</h3>
             <p class="role" >Marketing</p>
           </li>
-          <li>
+          <li class="team-info" >
             <img src="./images/img-4.jpg" alt="person-4" width="264" />
             <h3 class="name-item" >Daniel Wilson</h3>
             <p class="role" >UI Designer</p>
@@ -98,37 +98,37 @@
         </ul>
       </section>
       <section>
-        <h2 class="porfolio" >Our Portfolio</h2>
+        <h2 class="portfolio" >Our Portfolio</h2>
         <ul>
-          <l class="item-card" >
+          <li class="item-card" >
             <img  src="./images/image-1.jpg" alt="App-for-banking" width="360" />
-            <h3 class="name-item" >Banking App</h3>
-            <p class="role" >App</p>
-          </l>
+            <h3 class="title-item" >Banking App</h3>
+            <p class="describe" >App</p>
+          </li>
           <li class="item-card" >
             <img src="./images/image-2.jpg" alt="Marketing-payment" width="360" />
-            <h3 class="name-item" >Cashless Payment</h3>
-            <p class="role" >Marketing</p>
+            <h3 class="title-item" >Cashless Payment</h3>
+            <p class="describe" >Marketing</p>
           </li>
           <li class="item-card" >
             <img  src="./images/image-3.jpg" alt="Meditation-app" width="360" />
-            <h3 class="name-item" >Meditation App</h3>
-            <p class="role" >App</p>
+            <h3 class="title-item" >Meditation App</h3>
+            <p class="describe" >App</p>
           </li>
           <li class="item-card" >
             <img  src="./images/image-4.jpg" alt="Taxi-service" width="360" />
-            <h3 class="name-item" >Taxi Service</h3>
-            <p class="role" >Marketing</p>
+            <h3 class="title-item" >Taxi Service</h3>
+            <p class="describe" >Marketing</p>
           </li>
           <li class="item-card" >
             <img  src="./images/image-5.jpg" alt="Screen-illustrations" width="360" />
-            <h3 class="name-item" >Screen Illustrations</h3>
-            <p class="role" >Design</p>
+            <h3 class="title-item" >Screen Illustrations</h3>
+            <p class="describe" >Design</p>
           </li>
           <li class="item-card" >
             <img  src="./images/image-6.jpg" alt="Online-courses" width="360" />
-            <h3 class="name-item" >Online Courses</h3>
-            <p class="role" >Marketing</p>
+            <h3 class="title-item" >Online Courses</h3>
+            <p class="describe" >Marketing</p>
           </li>
         </ul>
       </section>
