--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="#contacts" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address">
+      <address>
         <ul>
           <li><a href="mailto:info@devstudio.com" class="link-address">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111" class="link-address">+11 (000) 111-11-11</a></li>
