--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <a href="./index.html" class="logo">Web<span>Studio</span></a>
         <ul>
           <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="#portfolio" class="link">Portfolio</a></li>
-          <li><a href="#contacts" class="link">Contacts</a></li>
+          <li><a href=".portfolio" class="link">Portfolio</a></li>
+          <li><a href=".contacts" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="addres-info">
         <ul>
           <li><a href="mailto:info@devstudio.com" class="link-address">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111" class="link-address">+11 (000) 111-11-11</a></li>
