--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <a href="./index.html" class="logo">Web<span>Studio</span></a>
         <ul>
           <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href=".portfolio" class="link">Portfolio</a></li>
-          <li><a href=".contacts" class="link">Contacts</a></li>
+          <li><a href="" class="link">Portfolio</a></li>
+          <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address class="addres-info">
